--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite": "^4"
   },
   "dependencies": {
+    "rippleui": "^1.12.1",
     "surrealdb.js": "^1.0.0-beta.5",
     "svelte-turnstile": "^0.5.0"
   }
